Aggiunte funzioni per inserire, eliminare e modificare le torte.

--- a/PiesManager/Web.config
+++ b/PiesManager/Web.config
@@ -14,6 +14,9 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+	<connectionStrings>
+		<add name="PiesDbContext" connectionString="Data Source=WINAPLY2UGMYFWK;Initial Catalog=Pies;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
+	</connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.8.1" />
     <httpRuntime targetFramework="4.8.1" />
