--- a/PiesManager/packages.config
+++ b/PiesManager/packages.config
@@ -6,6 +6,7 @@
   <package id="bootstrap" version="3.4.1" targetFramework="net481" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net481" />
   <package id="jQuery" version="3.4.1" targetFramework="net481" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.9" targetFramework="net481" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net481" />
   <package id="Microsoft.AspNet.Mvc.it" version="5.2.9" targetFramework="net481" />
   <package id="Microsoft.AspNet.Razor" version="3.2.9" targetFramework="net481" />
@@ -17,6 +18,7 @@
   <package id="Microsoft.AspNet.WebApi.Client.it" version="5.2.9" targetFramework="net481" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.9" targetFramework="net481" />
   <package id="Microsoft.AspNet.WebApi.Core.it" version="5.2.9" targetFramework="net481" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.9" targetFramework="net481" />
   <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.9" targetFramework="net481" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.9" targetFramework="net481" />
   <package id="Microsoft.AspNet.WebApi.WebHost.it" version="5.2.9" targetFramework="net481" />
