Modifiche ai metodi Put, Post, Remove a aggiunta metodo Get per integrazione gestione immagini.

--- a/PiesManager/Web.Release.config
+++ b/PiesManager/Web.Release.config
@@ -14,7 +14,13 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+	<connectionStrings>
+		<add name="PiesDbContext"
+		  connectionString="Data Source=;Initial Catalog=Pies;Integrated Security=SSPI"
+		  xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+	</connectionStrings>
   <system.web>
+	<authentication mode="Windows"/>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
       Nell'esempio riportato di seguito la trasformazione "Replace" sostituisce l'intera sezione
