--- a/PiesManager/Web.config
+++ b/PiesManager/Web.config
@@ -18,6 +18,7 @@
 		<add name="PiesDbContext" connectionString="Data Source=;Initial Catalog=Pies;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
 	</connectionStrings>
   <system.web>
+	<authentication mode="Windows"/>
     <compilation debug="true" targetFramework="4.8.1" />
     <httpRuntime targetFramework="4.8.1" />
   </system.web>
